# Sensitive-Fields-PoC

./: README.md  background.js  content.js  manifest.json  pyproject.toml
shannahpoc/: localhost-server.py
