[tool.poetry]
name = "shannahpoc"
version = "0.1.0"
description = ""
authors = ["Shannah Santucci <shannah.santucci@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
